# vc-testing-module

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW.md  IMPROVEMENT_PLAN.md  LICENSE  MULTI_BROWSER_LOGIN_TESTS.md  README.md  Setup project checklist.md  backend-packages.json  conftest.py  graphql2python.yaml  graphql_types_codegen.py  package-lock.json  package.json  project-overview.md  pyproject.toml  pytest.ini  requirements.txt
_refactored/: .env.example  CLAUDE.md  pyproject.toml
_refactored/core/: global_settings.py
_refactored/core/auth/: token_info.py
_refactored/core/clients/: graphql.py  rest.py
_refactored/core/logger/: __init__.py  null_logger.py  rich_logger.py
_refactored/dataset/: dataset_seeder.py  entity.py  manager.py  resolver.py
_refactored/dataset/data/: catalogs.json  contacts.json  coupons.json  languages.json  measures.json  orders.json  organizations.json  pricelist_assignments.json  prices.json  product_variations.json  products.json  properties_dictionary_items.json  shipping_methods.json  stores.json  users.json
_refactored/gql/fragments/: cart.graphql  cart_address.graphql  cart_with_list.graphql  configuration_line_item.graphql  contact.graphql  coupon.graphql  custom_identity_result.graphql  line_item.graphql  order_line_item.graphql  order_payment.graphql  order_shipment.graphql  pickup_address.graphql  pickup_location_address.graphql  (+8 more)
_refactored/page_objects/: browser_storage.py
_refactored/restapi/: constants.py
_refactored/tests/: conftest.py  constants.py
_refactored/utils/: address_utils.py  har_recorder.py  line_item_utils.py
(+3898 files in other folders)
