[project]
name = "vc-auto-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest==2.13.5",
    "allure-python-commons==2.13.5",
    "playwright==1.58.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pytest==9.0.2",
    "pytest-playwright==0.7.2",
    "pytest-retry==1.6.3",
    "requests==2.32.5",
    "rich==14.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--retries=1 --alluredir=allure-results"
markers = [
    "graphql: GraphQL API tests",
    "e2e: end-to-end UI tests using Playwright (require a running frontend)",
    "restapi: REST API admin endpoint tests",
    "serial: test mutates global platform state and must not run in parallel",
    "destructive: test restarts or drops global state (restart platform, drop search index). Excluded from default CI runs.",
    "with_user(username): sign in as the given user for this test",
    "with_cart(items): seed a cart with the given list of (productId, quantity) pairs",
    "delete_cart_after: delete the user's cart at teardown (reads localStorage for e2e tests)",
    "quantity_control(type): require specific add-to-cart control (stepper|button)",
    "range_filter_type(type): require specific range filter UI (slider|default)",
    "checkout_mode(mode): require specific checkout mode (single-page|multi-step)",
]

[tool.setuptools.packages.find]
exclude = ["tests*", ".venv*"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
